implement whitelist swagger
