# io/rest/init.go
@@ -39,12 +39,12 @@ func init() {
 	rest.EchoPut("/v1/zone/:id", updateZone, middleware.ParkingAdminApiKey)
 	rest.EchoDelete("/v1/zone/:id", deleteZone, middleware.ParkingAdminApiKey)
 
+	rest.EchoGet("/v1/whitelists/toApprove", getWhitelistsToApprove, middleware.ParkingAdminApiKey)
 	rest.EchoPut("/v1/whitelist/approve/:id", approveWhitelist, middleware.ParkingAdminApiKey)
 	rest.EchoGet("/v1/whitelists/approved", getWhitelistsApproved, middleware.ParkingAdminApiKey)
-	rest.EchoGet("/v1/whitelists/toApprove", getWhitelistsToApprove, middleware.ParkingAdminApiKey)
 	rest.EchoDelete("/v1/whitelist/:id", deleteWhitelist, middleware.ParkingAdminApiKey)
 
-	//TODO: Add route for parking admin to check parking logs
+	// TODO: Add route for parking admin to check parking logs
 
 	//User requests
 	rest.EchoPost("/user/signUp", userSignUp, middleware.UserApiKey)
@@ -56,6 +56,7 @@ func init() {
 	rest.EchoGet("/v1/user/whitelists/requested", getUserWhitelists, middleware.UserApiKey)
 	rest.EchoPost("/v1/user/whitelist/request", requestWhitelist, middleware.UserApiKey)
 
+	// TODO: fix pagination
 	rest.EchoGet("/v1/user/logs/:page", getUserLogs, middleware.UserApiKey)
 
 	//Raspberry PI requests
